# Linux_Command

./: D_BUS_LIB.md  GDB-Debug.md  Install_VietNamese.md  Linux_Layer.md  Linux_Layer_2.md  Linux_Process_Spawn.md  README.md  What is shell bash.md  sdbus-cpp.md  stl_container_operations.html
Bash Script/: Bash_Doc.md  Bash_Doc_2.md  Bash_Script.md
DebugTool/: Build_And_Run.sh  CMakeLists.txt  Document.md  main.cpp
DebugTool/DebugClient/: CMakeLists.txt
DebugTool/DebugClient/ClientInternal/ClientProtocol/inc/: GDBProtocol.h
DebugTool/DebugClient/ClientInternal/ClientProtocol/src/: GDBProtocol.cpp
DebugTool/DebugClient/ClientInternal/ClientTransport/inc/: TCPTransport.h
DebugTool/DebugClient/ClientInternal/ClientTransport/src/: TCPTransport.cpp
DebugTool/DebugClient/ClientPublic/inc/: DebugClient.h
DebugTool/DebugClient/ClientPublic/src/: DebugClient.cpp
DebugTool/DebugClient/Interface/Protocol/: IProtocol.h
DebugTool/DebugClient/Interface/Transport/: ITransport.h
DebugTool/DebugServer/: CMakeLists.txt
DebugTool/DebugServer/Interface/: IDebugServer.h
DebugTool/DebugServer/ServerInternal/OpenCD/inc/: OpenOCD.h
DebugTool/DebugServer/ServerInternal/OpenCD/src/: OpenOCD.cpp
DebugTool/DebugServer/ServerPublic/inc/: DebugServer.h
DebugTool/DebugServer/ServerPublic/src/: DebugServer.cpp
DebugTool/Utilities/: CMakeLists.txt  ProcessHandle.cpp
Design_Patterns/: cpp_design_patterns.html
Design_Patterns/Behavioral/observer/: observer.cpp
Design_Patterns/Behavioral/state/: state.cpp
Design_Patterns/Behavioral/strategy/: strategy.cpp
Design_Patterns/Creational/abstract_factory/: abstract_factory.cpp  abstract_factory.md
Design_Patterns/Creational/builder/: builder.cpp
Design_Patterns/Creational/factory_method/: factory_method.cpp  factory_method.io  factory_method.md
Design_Patterns/Structural/adapter/: adapter.cpp
Design_Patterns/Structural/proxy/: proxy.cpp
FileSystem/: Cấu trúc đại diện cho process hoặc thread trong Linux  FileSystem.md  FileSystemLinux.md  I_O_OBJECT.md  Linux_SubSystem.html
FreeRTOS/: Binary Semaphore và Counting Semaphor.md  Callback function của Software Timer.md  Chống tràn Stack.md  Cơ Chế Hoạt Động Của Ngắt.md  Giới thiệu.md  ISR Yield.md  Idle Task và Idle Hook Function.md  Multitasking.md  Mutex.md  Ngắt SysTick.md  Phân biệt các loại Delay.md  Queue.md  Quản lý ưu tiên và lập lịch tác vụ.md  Semaphore.md  Stream Buffer.md  Task Notification.md  Thiết Kế Hệ Thống Sử Dụng RTOS.md  Tiết kiệm năng lượng.md  Tránh lỗi khi sử dụng Mutex.md  Tối Ưu Tài Nguyên CPU.md  Vấn đề khi gửi dữ liệu vào Queue.md  Vần đề của Mutex và Giải Pháp Với Gatekeeper Task.md  Ứng dụng của Task Idle Hook.md
IPC/: ipc_message_queue.html  ipc_pipe_fifo_deep_dive.html  ipc_shared_memory.html  ipc_unix_socket.html  linux_filesystem_guide.html  linux_ipc_study_guide.html
JournalWrapper/: CMakeLists.txt  JournalWrapper.cpp  JournalWrapper.h  main.cpp
ManJaro_Utilites/: README.md
MarketLog/: # C++ Logger Design Document.md  journal_logger.cpp  logger.cpp  ring_buffer.c  ring_buffer.h  ring_buffer_cpp.cpp
MarketLog/Save/: journal_logger.h  logger.h  test.cpp
MarketLog/Test/: Build_and_Run.sh  CMakeLists.txt  MarKetLog.cpp  MarKetLog.h  MarKetLogFileHandle.cpp  MarKetLogFileHandle.h  MarketLogContext.h  MarketLogRotator.cpp  MarketLogRotator.h  main.cpp  main.h
MarketLog/Test_2/: Build_and_Run.sh  CMakeLists.txt  LogWatcher.cpp  LogWatcher.h  MarKetLog.cpp  MarKetLog.h  MarKetLogConfig.cpp  MarKetLogConfig.h  MarKetLogConfig.yaml  MarKetLogUtility.cpp  MarKetLogUtility.h  MarketLogContext.h  MarketLogRotator.cpp  MarketLogRotator.h  main.cpp
OPENCD/: Tải bản build sẵn.md
OPENCD/DebugTool/: Build_and_Run.sh  CMakeLists.txt  DebugTool.md
OPENCD/DebugTool/inc/: DebugCore.h  DebugStateMachine.h  EventDispatcher.h  GDBDebugger.h  GDBMIChannel.h  GDBMIParser.h  GDBMIReader.h  GDBMIWriter.h  IDebugEventListener.h  IDebugger.h  MIRecord.h  ProcessHandle.h  Types.h  VariableManager.h
OPENCD/DebugTool/src/: DebugCore.cpp  GDBDebugger.cpp  GDBMIProtocol.cpp  ProcessHandle.cpp  main.cpp
OPENCD/stm32-debugger/: Build_and_Run.sh  CMakeLists.txt  main_demo.cpp
OPENCD/stm32-debugger/include/: DebugCore.h  IDebugEventListener.h  IDebugger.h  Types.h
OPENCD/stm32-debugger/include/adapter/: BreakpointManager.h  DebugStateMachine.h  EventDispatcher.h  GDBDebugger.h  VariableManager.h
OPENCD/stm32-debugger/include/process/: GDBProcess.h  OpenOCDProcess.h  ProcessHandle.h
OPENCD/stm32-debugger/include/protocol/: GDBMIChannel.h  GDBMIParser.h  GDBMIReader.h  GDBMIWriter.h  MIRecord.h
OPENCD/stm32-debugger/src/: DebugCore.cpp
OPENCD/stm32-debugger/src/adapter/: BreakpointManager.cpp  DebugStateMachine.cpp  EventDispatcher.cpp  GDBDebugger.cpp  VariableManager.cpp
OPENCD/stm32-debugger/src/process/: GDBProcess.cpp  OpenOCDProcess.cpp  ProcessHandle.cpp
OPENCD/stm32-debugger/src/protocol/: GDBMIChannel.cpp  GDBMIParser.cpp  GDBMIReader.cpp  GDBMIWriter.cpp
Python/: Ex1.py  Python kiểu dữ liệu.md  Python vòng lặp.md  Python_Sum.md
StoreHouse/: mới 29.txt  mới 30.txt  mới 31.txt
